# python-re3data

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  index.html  justfile  pyproject.toml  versions.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/requirements/: ci.in  ci.txt
.github/templates/: .changes.j2  .macros.j2  .release_notes.md.j2  CHANGELOG.md.j2
.github/templates/.components/: changelog_header.md.j2  changelog_init.md.j2  changelog_update.md.j2  changes.md.j2  custom.md.j2  macros.md.j2  release_notes_footer.md.j2  unreleased_changes.md.j2  versioned_changes.md.j2
.github/workflows/: codeql.yml  constraints.txt  docs.yml  e2e_test.yml  label.yml  main.yml  pr.yml  publish.yml  scorecard.yml  scorecards.yml  stale.yml  test.yml  upgrade-requirements.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/cli/: index.html
0.1.0/contributing/: index.html
0.1.0/license/: index.html
0.1.0/search/: search_index.json
0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
0.10.0/api/: index.html
0.10.0/changelog/: index.html
0.10.0/cli/: index.html
0.10.0/contributing/: index.html
0.10.0/exceptions/: index.html
0.10.0/features/: index.html
0.10.0/install/: index.html
0.10.0/license/: index.html
0.10.0/resources/: index.html
0.10.0/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/changelog/: index.html
0.2.0/cli/: index.html
0.2.0/contributing/: index.html
0.2.0/license/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/api/: index.html
0.3.0/changelog/: index.html
0.3.0/cli/: index.html
0.3.0/contributing/: index.html
0.3.0/license/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/api/: index.html
0.4.0/changelog/: index.html
0.4.0/cli/: index.html
0.4.0/contributing/: index.html
0.4.0/license/: index.html
0.4.0/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/api/: index.html
0.5.0/changelog/: index.html
0.5.0/cli/: index.html
0.5.0/contributing/: index.html
0.5.0/exceptions/: index.html
0.5.0/license/: index.html
0.5.0/resources/: index.html
0.5.0/search/: search_index.json
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/api/: index.html
0.6.0/changelog/: index.html
0.6.0/cli/: index.html
0.6.0/contributing/: index.html
0.6.0/exceptions/: index.html
0.6.0/install/: index.html
0.6.0/license/: index.html
0.6.0/resources/: index.html
0.6.0/search/: search_index.json
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/api/: index.html
0.7.0/changelog/: index.html
0.7.0/cli/: index.html
0.7.0/contributing/: index.html
0.7.0/exceptions/: index.html
0.7.0/install/: index.html
0.7.0/license/: index.html
0.7.0/resources/: index.html
0.7.0/search/: search_index.json
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/api/: index.html
0.8.0/changelog/: index.html
0.8.0/cli/: index.html
0.8.0/contributing/: index.html
0.8.0/exceptions/: index.html
0.8.0/install/: index.html
0.8.0/license/: index.html
0.8.0/resources/: index.html
0.8.0/search/: search_index.json
0.9.0/: 404.html  index.html  sitemap.xml
0.9.0/api/: index.html
0.9.0/changelog/: index.html
0.9.0/cli/: index.html
0.9.0/contributing/: index.html
0.9.0/css/: extra.css
0.9.0/exceptions/: index.html
0.9.0/features/: index.html
0.9.0/install/: index.html
0.9.0/license/: index.html
0.9.0/resources/: index.html
0.9.0/search/: search_index.json
contributing/: index.html
docs/: mkdocs.yml
docs/src/: api.md  cli.md  contributing.md  exceptions.md  features.md  install.md  license.md  resources.md
license/: index.html
requirements/: ci  docs  docs.txt
search/: search_index.json
src/re3data/: __about__.py  __init__.py  __main__.py  _cli.py  _client.py  _exceptions.py  _response.py  _serializer.py  cli.py
src/re3data/_client/: __init__.py  _async.py  _sync.py  base.py
src/re3data/_resources/: .repository.xml  .repository_list.xml  README.md  __init__.py  mixins.py  repository.py  repository_list.py
tests/: conftest.py  test_about.py  test_version.py
tests/cassettes/: repositories.yaml  repository.yaml
tests/e2e/: test_live_api.py
tests/integration/: test_async_client.py  test_cli.py  test_client.py  test_package_import.py
tests/unit/: test_resources.py
